# serializer version: 1
# name: test_entity_registry[media_player.test_player-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_player',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'squeezebox',
    'previous_unique_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3077055>,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[media_player.test_player-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Player',
      'group_members': list([
      ]),
      'is_volume_muted': True,
      'media_album_name': 'None',
      'media_artist': 'None',
      'media_channel': 'None',
      'media_duration': 1,
      'media_position': 1,
      'media_position_updated_at': HAFakeDatetime(2024, 10, 7, 1, 47, 54, 677356, tzinfo=datetime.timezone.utc),
      'media_title': 'None',
      'query_result': dict({
      }),
      'repeat': <RepeatMode.OFF: 'off'>,
      'shuffle': False,
      'supported_features': <MediaPlayerEntityFeature: 3077055>,
      'volume_level': 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_player',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_entity_registry[switch.squeezebox_alarm_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.squeezebox_alarm_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm',
    'original_name': 'Test Player Alarm 07:00',
    'platform': 'squeezebox',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff-alarm-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_registry[switch.squeezebox_alarm_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'alarm_id': '1',
      'dow': '[1, 2, 3, 4, 5]',
      'friendly_name': 'Test Player Alarm 07:00',
      'icon': 'mdi:alarm',
      'repeat': 'False',
      'scheduled_today': True,
      'time': '07:00',
      'url': 'CURRENT_PLAYLIST',
      'volume': 0.5,
    }),
    'context': <ANY>,
    'entity_id': 'switch.squeezebox_alarm_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
